# lanterna-magica

./: .dockerignore  .gitignore  .secrets.toml.example  Dockerfile  README.md  data.md  design.md  pyproject.toml  settings.toml
.github/workflows/: build.yml
migrations/: 0001.create-services.sql  0002.create-environments.sql  0003.create-configurations.sql  0004.create-shared-values.rollback.sql  0004.create-shared-values.sql  0005.create-config-substitutions.rollback.sql  0005.create-config-substitutions.sql  0006.add-pg-trgm-shared-values.rollback.sql  0006.add-pg-trgm-shared-values.sql  0007.add-pg-trgm-services-environments.rollback.sql  0007.add-pg-trgm-services-environments.sql  0008.create-dimension-types.rollback.sql  0008.create-dimension-types.sql  0009.create-dimensions.rollback.sql  0009.create-dimensions.sql  0011.create-scopes-and-hash.rollback.sql  0011.create-scopes-and-hash.sql  0012.drop-services-environments.rollback.sql  0012.drop-services-environments.sql  0013.seed-global-dimensions.rollback.sql  0013.seed-global-dimensions.sql  0014.add-revision-scopes-dimension-index.rollback.sql  0014.add-revision-scopes-dimension-index.sql  0015.add-configuration-scopes-dimension-index.rollback.sql  0015.add-configuration-scopes-dimension-index.sql  0016.add-configurations-archived-at.rollback.sql  0016.add-configurations-archived-at.sql  0017.add-scope-type-uniqueness.rollback.sql  0017.add-scope-type-uniqueness.sql  0018.create-outputs.rollback.sql  0018.create-outputs.sql
src/lanterna_magica/: app.py  config.py  db.py  errors.py  telemetry.py
tests/: conftest.py  test_configurations.py  test_environments.py  test_health.py  test_services.py  test_shared_values.py  test_utils.py  utils.py
tests/integration/: conftest.py  gql.py  test_config_api.py  test_config_scope.py  test_configurations.py  test_configurations_crud.py  test_configurations_dimensions.py  test_configurations_substitutions.py  test_configurations_validation.py  test_dimension_types.py  test_dimensions.py  test_dimensions_archive.py  test_dimensions_crud.py  test_dimensions_loader.py  test_environments.py  test_health.py  test_outputs.py  test_outputs_api.py  test_outputs_api_errors.py  test_outputs_api_trigger.py  test_outputs_api_write.py  test_outputs_data.py  test_outputs_results.py  test_services.py  test_shared_values.py  test_shared_values_base.py  test_shared_values_crud.py  test_shared_values_revisions.py  test_shared_values_scope.py  test_shared_values_used_by.py  test_used_by.py  utils.py
tests/unit/: conftest.py  (+12 more)
web/: package-lock.json  package.json  shadow-cljs.edn
(+87 files in other folders)
